[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsmidas"
version = "1.1.0"
description = "MiDaS function for VapourSynth"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "HolyWu", email = "holywu@gmail.com"}]
keywords = ["MiDaS", "VapourSynth"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Video"
]
dependencies = [
  "numpy>=1.26.2",
  "opencv-python>=4.8.1.78",
  "requests>=2.31.0",
  "timm==0.6.13",
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "tqdm>=4.66.1",
  "VapourSynth>=62"
]

[project.urls]
"Homepage" = "https://github.com/HolyWu/vs-midas"
"Bug Tracker" = "https://github.com/HolyWu/vs-midas/issues"
